--- a/python_server/docker-compose.yml
+++ b/python_server/docker-compose.yml
@@ -2,8 +2,7 @@ version: "3.9"
 
 services:
   server:
-    build: .
-    command: python3 -u main.py
+    build: server
     restart: always
     ports:
       - "1883:1883"
