--- a/python_server/server/Dockerfile
+++ b/python_server/server/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.10-alpine
 WORKDIR /usr/src/app
-COPY requirements.txt ./
+COPY ../requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
-COPY ./server ./server
-COPY ./main.py .
+COPY . .
+CMD ["python3", "-u", "main.py"]
